# rsync_files_from_digitalocean

./: .gitignore  README.md  cli.py  pyproject.toml
rsync_files_from_digitalocean/: application.py  main.py  model.py  utils.py
